chore: add google-site-verification

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>Diceodds</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="google-site-verification" content="JyAX3dsMdSpzKQz6gc9c0u_MN8Dd72G9HrOWiJMfrG8" />
     <link rel="icon" href="favicon.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
